tests/ui/vec.stderr
error: useless use of `vec!`
  --> $DIR/vec.rs:24:14
   |
24 |     on_slice(&vec![]);
   |              ^^^^^^^ help: you can use a slice directly `&[]`
   |
note: lint level defined here
  --> $DIR/vec.rs:4:9
   |
4  | #![deny(useless_vec)]
   |         ^^^^^^^^^^^

error: useless use of `vec!`
  --> $DIR/vec.rs:30:14
   |
30 |     on_slice(&vec![1, 2]);
   |              ^^^^^^^^^^^ help: you can use a slice directly `&[1, 2]`

error: useless use of `vec!`
  --> $DIR/vec.rs:36:14
   |
36 |     on_slice(&vec ![1, 2]);
   |              ^^^^^^^^^^^^ help: you can use a slice directly `&[1, 2]`

error: useless use of `vec!`
  --> $DIR/vec.rs:42:14
   |
42 |     on_slice(&vec!(1, 2));
   |              ^^^^^^^^^^^ help: you can use a slice directly `&[1, 2]`

error: useless use of `vec!`
  --> $DIR/vec.rs:48:14
   |
48 |     on_slice(&vec![1; 2]);
   |              ^^^^^^^^^^^ help: you can use a slice directly `&[1; 2]`

error: useless use of `vec!`
  --> $DIR/vec.rs:64:14
   |
64 |     for a in vec![1, 2, 3] {
   |              ^^^^^^^^^^^^^ help: you can use a slice directly `&[1, 2, 3]`

error: aborting due to 6 previous errors

